# collective-compute

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  SPEC.md  pyproject.toml  pyrightconfig.json
src/collective_compute/: __init__.py  config.py
src/collective_compute/gateway/: __init__.py  app.py  registry.py  schemas.py
src/collective_compute/node/: __init__.py  app.py
tests/: __init__.py  test_gateway_authentication.py  test_registry.py
