[project]
name = "collective-compute"
version = "0.1.0"
description = "Gateway and provider-node MVP for decentralised LLM inference"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.27,<1.0",
    "python-dotenv>=1.0,<2.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "black>=26.0,<27.0",
    "pre-commit>=4.0,<5.0",
    "pyright>=1.1.400,<2.0",
    "pytest>=8.0,<9.0",
    "ruff>=0.15,<1.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # Formatter-compatible trailing commas.
    "D100",   # Package modules do not need a module docstring.
    "D104",   # Package __init__ modules do not need a docstring.
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "S101"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
